2025-07-19 Anton Adamansky  <adamansky@gmail.com>  [WIP]
  * Added thread_initializer to iwtp (iwtp.h)
  * Migration to Autark build system.
  * iwrb improvements and iwrb test cases (iwrb.h)

2024-07-02  Anton Adamansky  <adamansky@gmail.com>  [v1.4.19]
  * Added iwcsv.h utility used to produce CSV formatted lines.
  * Fixed incorrect JSON generation for some locales where ',' is printed as FP separator.
  * Fixed race condition in iwtp (iwtp.h)
  * Naming refactoring, minor fixes
  * Added iwjsreg_merge(), iwjsreg_replace()
  * Added jbn_merge_patch_path()
  * Fixed json pointer error for empty path.
  * Added iwu_file_read_as_buf_max() (iwutils.h)
  * Fixed memory leak in iwstw_schedule_empty_only()

2024-04-16  Anton Adamansky  <adamansky@gmail.com>  [v1.4.18]
  * Added iwp_random_fill() (iwp.h)
  * Added convenient numeric conversion functions (iwconv.h)
  * Chore: iwp_{lock,unlock} fcnt replaced by more convenient and reliable flock()
  * Added iwxstr_printf_alloc() (iwxstr.h)
  * Copyright updated
  * Added new iwjsreg.h module - simple JSON key-value file store with atomic
  * Allowed to construct JBL_NODE without IWPOOL ini this case node data will

2023-11-13  Anton Adamansky  <adamansky@gmail.com>  [v1.4.17]
  * Added void iwulist_reset(IWULIST *list) (iwarr.h)
  * Added experimental jbn_from_js() (iwjson.h)
  * Fixed C++ compilation errors https://github.com/Softmotions/ejdb/issues/381
  * Fixed Correct UCS-16 surrogate pair start code point. #51
  * Added iwchars.h replacing some ctype.h functions.
  * Added simple refcounting container iwrefs.h
  * Fixed incorrect parsing of empty JSON keys.
  * Added jbn_as_xml() (iwjson.h)
  * Added jbn_get() (iwjson.h)
  * Added IW_ERROR_OPERATION_TIMEOUT common error code.
  * Removed support of legacy iwkv v1 data file format.
  * Fixed incorrect read of memory bytes (reported by valgrind)
  * Fixed windows build
  * Added ref counting feature to iwpool (iwpool.h)
